--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #ecf0f1;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -12,3 +13,79 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.Clients {
+    width: 90vw;
+    margin: 0 5vw;
+} 
+
+.client {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 2fr 1fr 1fr;
+  grid-gap: 5px;
+  background-color: #ecf0f1;
+}
+
+.client > p {
+  justify-self: center;
+  align-self: center;
+  font-size: 12px;
+  cursor: pointer;
+  border-bottom: 1px solid rgba(93,93,98,0.4);
+}
+
+.client > p:hover {
+  color: white
+}
+
+.tablename {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 2fr 1fr 1fr;
+  grid-gap: 5px;
+  background-color: #F7CE3E;
+  
+}
+
+.tablename > p {
+  justify-self: center;
+  align-self: center;
+  font-size: 12px;
+  cursor: pointer;
+  border-bottom: 1px solid rgba(93,93,98,0.4);
+}
+
+.appnavbar {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 7fr;
+  grid-gap: 5px;
+  background-color: black;
+  
+}
+
+.appnavbar > p {
+  justify-self: center;
+  align-self: center;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.appnavbar > p:hover {
+  background-color: grey
+}
+
+.AddClient {
+display: grid;
+grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 3fr;
+grid-gap: 5px;
+background-color: #F7CE3E;
+font-size: 12px;
+}
+.AddClient > div {
+  justify-self: center;
+  align-self: center;
+  font-size: 12px;
+  cursor: pointer;
+
+}
+
+
